--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <body>
         <h1 class="header--main">Discover hidden places in the world around you</h1>
         <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
-        <video autoplay loop>
+        <video autoplay loop muted>
            <source src="resources/videos/excursion.mp4" type="video/mp4">
         </video>
+        <h2 class="header--secondary">Your personal travel guide</h2>
+        <h4 class="header--sub-header">Excursion remembers places you like, and recomends new interest around you.</h4>
     </body>
 </html>
